# Learning-Terminal

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  learning_terminal.py  package-lock.json  package.json  pyproject.toml
src/: config.js  index.js
src/ai/: assistant.js
src/lessons/: commands.js  vim.js
